--- a/src/views/layouts/styles.html
+++ b/src/views/layouts/styles.html
@@ -3,6 +3,8 @@
 <!-- endbuild -->
 <!-- build:css(.tmp) style/style.min.css -->
 <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
+<link rel="stylesheet" href="styles/jquery-nao-calendar.css">
+
 <!-- endbuild -->
 
 <!-- boostrap -->
@@ -13,4 +15,3 @@
 <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/> -->
 <link rel="stylesheet" href="/node_modules/owl.carousel/dist/assets/owl.carousel.min.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css">
-<link rel="stylesheet" href="datepicker.min.css">
