--- a/src/styles/pages/_tour-schedule.scss
+++ b/src/styles/pages/_tour-schedule.scss
@@ -233,7 +233,15 @@ $font_size_3: 16px;
 				padding: 10px 0;
 				span{
 					color: $color_1;
-					font-size: $font_size_1;
+					font-size: $font_size_2;
+					font-weight: 600;
+					@media only screen and (max-width: 480px) {
+						font-size: 18px;
+					}
+				}
+				button{
+					color: $color_1;
+					font-size: $font_size_2;
 					font-weight: 600;
 					@media only screen and (max-width: 480px) {
 						font-size: 18px;
